
not yet  BJH  Release 10.75.00

              bmptopnm: Add ability to convert Version 4 and 5 Windows BMP.

              pbmtext: remove undocumented -dump option; add 'genfontc'
              development tool (buildtools/ directory) to replace it.

              pbmtext: Add -dry-run

              pbmtext: Add -dump-sheet

              pbmtext: Speedup: renders directly in raw PBM.

              pbmreduce: add -randomseed.

              anytopnm, pnmmargin, pnmquant, ppmquant, pnmquantall, pgmcrater,
              ppmfade, ppmrainbow, ppmshadow, pbmtox10bm, pamstretch-gen:
              Add -version.

              fiascotopnm: change -version to include Netpbm version.

              hpcdtoppm dummy version: update web link to real version.

              libnetpbm: Add pm_system2(), pm_system2_lp(), pm_system2_vp() -
              same as pm_system(), etc. but returns the termination status.

              ppmhist: fix incorrect color names.  Introduced in
              Netpbm 10.19 (November 2003).

              ppmshadow: fix bug: don't ignore invalid option.  Introduced in
              Netpbm 10.9 (September 2002).

              pnmpaste: fix possible invalid memory access.  Introduced in
              Netpbm 1.44 (September 2008).

              pbmreduce: fix undefined behavior when scale factor argument is
              too big.  Always present (pbmreduce was new in September 1989).

              pbmtext: Fix bug: invalid memory reference when text contains
              code points > 127.  Broken in 10.74.

              cameratopam: fix invalid memory reference; effect unknown.
              Introduced in Netpbm 10.68 (September 2014).

              Install on Windows: fix backward compatibility symlinks for
              pnmtoplainpnm, pnmquantall.

              Build: Remove use of strndup so it compiles on Mac OS X 10.6.
              Broken in 10.74.

              Build: Remove use of isfinite so it compiles with C89 standard